[gd_scene load_steps=3 format=3 uid="uid://ur4sqm4vdxd8"]

[ext_resource type="Script" uid="uid://dw6hlum7opf1b" path="res://UI/pause_menu.gd" id="1_mdv54"]
[ext_resource type="Theme" uid="uid://bxi4lg4xa8uq4" path="res://ArtAssets/UI Assets/pastel/pastel.tres" id="2_jfm1e"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jfm1e")
script = ExtResource("1_mdv54")

[node name="PauseBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -156.0
offset_right = 192.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jfm1e")

[node name="PauseVBox" type="VBoxContainer" parent="PauseBackground"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.5
offset_top = -107.5
offset_right = 130.5
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_jfm1e")
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PauseBackground/PauseVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PauseTitle" type="Label" parent="PauseBackground/PauseVBox/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_jfm1e")
theme_override_font_sizes/font_size = 29
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PauseBackground/PauseVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="PauseBackground/PauseVBox/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_jfm1e")
text = "Resume"

[node name="MarginContainer3" type="MarginContainer" parent="PauseBackground/PauseVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="OptionsButton" type="Button" parent="PauseBackground/PauseVBox/MarginContainer3"]
layout_mode = 2
theme = ExtResource("2_jfm1e")
text = "Options"

[node name="MarginContainer4" type="MarginContainer" parent="PauseBackground/PauseVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="PauseBackground/PauseVBox/MarginContainer4"]
layout_mode = 2
theme = ExtResource("2_jfm1e")
text = "Quit"

[node name="MarginContainer5" type="MarginContainer" parent="PauseBackground/PauseVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="PauseBackground/PauseVBox/MarginContainer5"]
layout_mode = 2
theme = ExtResource("2_jfm1e")
text = "Restart"
